# Task-Duration-Classifier

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: python-app.yml
EDA/: pre_processing.ipynb
api/: api.py  main.py
data/processed/: final_cleaned_sample.csv  jira_issues_cleaned_sample.csv
model/: model_training.py
model_tests/: classification_report.txt  xgboost_classification_report.txt
models/: duration_classifier.joblib  duration_logistic_regression_classifier.joblib
notebooks/: 01-exploratory-data-analysis.ipynb  01_exploratory_data_analysis.ipynb  02-data-cleaning.ipynb  02_pre_processing.ipynb  03-feature-engineering.ipynb  03-pre-processing-and-feature-engineering.ipynb  03-pre-processing.ipynb  rebuild_data_notebooks.py
training/: evaluate_data_filters.py  model_training.py
ui/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  chart.tsx  select.tsx  table.tsx  tabs.tsx  textarea.tsx  toast.tsx
ui/src/lib/: api.ts  data.ts
