[project]
name = "task-time-predictor-api"
version = "1.0.0"
description = "FastAPI API for predicting task duration categories"
requires-python = "~=3.12.0"

dependencies = [
  "fastapi",
  "pydantic",
  "pandas",
  "scikit-learn",
  "joblib",
]

[project.optional-dependencies]
dev = [
  "uvicorn"
]

[tool.vercel]
entrypoint = "api.main:app"